fixing build an atom so canvas container is left aligned

--- a/trunk/simulations-html/simulations/build-an-atom/css/main-bootstrap.css
+++ b/trunk/simulations-html/simulations/build-an-atom/css/main-bootstrap.css
@@ -8,6 +8,7 @@ body {
     width: 60%;
     height: 95%;
     min-height: 95%;
+    left: 0;
 }
 
 /* For debug - uncomment to show border of the canvas. */
